--- a/Styles/moviePg.css
+++ b/Styles/moviePg.css
@@ -2,7 +2,7 @@ iframe{
     width: 560px;
     height: 315px;
 
-    display: block;
+    display: none;
     margin: auto;
 }
 
@@ -12,4 +12,34 @@ iframe{
 
 .info{
     text-align: center;
+}
+
+        /*Botões*/
+
+.menu-button{
+    position: relative;
+}
+
+.btn{
+    position: relative;
+    display: block;
+    padding-top: 150px;
+    padding-bottom: 150px;
+    padding-left: 430px;
+}
+
+.btn-audio{
+    margin: 10px;
+    border-radius: 7px;
+    width: 200px;
+    height: 40px;
+
+    border: 0;
+    background-color: #2e9dce;
+}
+
+.plaing{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 550px;
 }
